# actions

./: .gitignore  .yamllint  AGENTS.md  README.md  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  eol-workflow.yml  new-workflow.yml  update-workflow.yml
.github/workflows/: AGENTS.md  release-ansible-collection.yaml  release-container.yaml  release-zensical.yaml  semantic-release.yaml  smoke-test-release.yaml  smoke-test.yaml  test-ansible-collection.yaml  test-lint.yaml
all-green/: action.yml
docs/: AGENTS.md  analysis.md  contributing.md  getting-started.md  index.md
docs/actions/: all-green.md  index.md  setup-uv.md
docs/security/: index.md  permissions.md  supply-chain.md  vulnerability-management.md
docs/stylesheets/: extra.css
docs/workflows/: index.md  lint.md  semantic-release.md  zensical.md
docs/workflows/ansible/: index.md  release.md  test.md
docs/workflows/container/: index.md  release.md
setup-uv/: action.yml
tests/ansible/: README.md  galaxy.yml  pyproject.toml
tests/container/: Dockerfile
tests/python/: smoke_test.py
tests/shell/: smoke-test.sh
tests/shellcheck-jinja/: README.md  pyproject.toml
tests/shellcheck-jinja/templates/: greet.sh.j2
tests/shellcheck-jinja/tests/shellcheck-fixtures/: greet.sh.verbose.yml  greet.sh.yml  mapping.yml
tests/shellcheck-jinja/tests/shellcheck-fixtures/snapshots/: greet.verbose.sh
